* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v5.3.0:
~~~~~~~~~

* KGySoft.Drawing namespace:
============================
* Icons class:
  * The shadow mask of Icon resources have been changed so they appear better when displayed on a display or
    operating system with no alpha gradient support.
+ ImageExtensions class:
  + New BeginConvertPixelFormat/EndConvertPixelFormat methods
  + New ConvertPixelFormatAsync methods (for .NET 4.0 and above)
  + New ToIcon overload with ScalingMode parameter

! KGySoft.Drawing.Imaging namespace:
====================================
! RandomNoiseDitherer
  ! Constructor: An ArgumentOutOfRangeException is thrown for invalid strength
  ! The result differs from previous versions when using a specific seed
  * Improved performance
! InterleavedGradientNoiseDitherer constructor: An ArgumentOutOfRangeException is thrown for invalid strength
- OptimizedPaletteQuantizer class:
  - Octree method: Fixing a possible exception under .NET 3.5 caused by different behavior of Array.Sort
+ BitmapDataExtensions class:
  + New BeginClone/EndClone methods
  + New CloneAsync methods (for .NET 4.0 and above)
  + New BeginCopyTo/EndCopyTo methods
  + New CopyToAsync method (for .NET 4.0 and above)
  + New BeginDrawInto/EndDrawInto methods
  + New DrawIntoAsync methods (for .NET 4.0 and above)
  + New BeginToBitmap/EndToBitmap methods
  + New ToBitmapAsync method (for .NET 4.0 and above)
  + New BeginGetColors/EndGetColors methods
  + New GetColorsAsync method (for .NET 4.0 and above)
  + New BeginGetColorCount/EndGetColorCount methods
  + New GetColorCountAsync method (for .NET 4.0 and above)
  + New BeginToGrayscale/EndToGrayscale methods
  + New ToGrayscaleAsync method (for .NET 4.0 and above)
  + New BeginMakeGrayscale/EndMakeGrayscale methods
  + New MakeGrayscaleAsync method (for .NET 4.0 and above)
  + New BeginToTransparent/EndToTransparent methods