@@ -14,10 +14,12 @@
 * Icons class:
   * The shadow mask of Icon resources have been changed so they appear better when displayed on a display or
     operating system with no alpha gradient support.
-+ ImageExtensions class:
+* ImageExtensions class:
   + New BeginConvertPixelFormat/EndConvertPixelFormat methods
   + New ConvertPixelFormatAsync methods (for .NET 4.0 and above)
   + New ToIcon overload with ScalingMode parameter
+  - ConvertPixelFormat methods: Setting ColorPalette.Flags of the result Bitmap correctly. In Mono/Linux it could
+    happen that the result Bitmap had alpha palette entries but the bitmap wasn't rendered with alpha colors.
 
 ! KGySoft.Drawing.Imaging namespace:
 ====================================
@@ -28,7 +30,7 @@
 ! InterleavedGradientNoiseDitherer constructor: An ArgumentOutOfRangeException is thrown for invalid strength
 - OptimizedPaletteQuantizer class:
   - Octree method: Fixing a possible exception under .NET 3.5 caused by different behavior of Array.Sort
-+ BitmapDataExtensions class:
+* BitmapDataExtensions class:
   + New BeginClone/EndClone methods
   + New CloneAsync methods (for .NET 4.0 and above)
   + New BeginCopyTo/EndCopyTo methods
@@ -69,6 +71,8 @@
   + New AdjustContrastAsync method (for .NET 4.0 and above)
   + New BeginAdjustGamma/EndAdjustGamma methods
   + New AdjustGammaAsync method (for .NET 4.0 and above)
+  - ToBitmap method: Setting ColorPalette.Flags of the result Bitmap correctly. In Mono/Linux it could happen that
+    the result Bitmap had alpha palette entries but the bitmap wasn't rendered with alpha colors in a GUI.
 
 
 ~~~~~~~~~
